Fix rating stars in edit mode on mobile

--- a/src/amo/components/AddonReviewManagerRating/styles.scss
+++ b/src/amo/components/AddonReviewManagerRating/styles.scss
@@ -1,4 +1,5 @@
 @import '~amo/css/styles';
+@import '~ui/components/Rating/styles';
 
 .AddonReviewManagerRating {
   display: flex;
@@ -9,6 +10,11 @@
     height: 36px;
     margin: 12px 0;
     width: 100%;
+
+    &.Rating--small .IconStar {
+      height: 75%;
+      width: 75%;
+    }
   }
 
   @include respond-to(large) {
@@ -20,6 +26,11 @@
       width: auto;
 
       @include margin-start(6px);
+
+      &.Rating--small .IconStar {
+        height: $icon-small;
+        width: $icon-small;
+      }
     }
   }
 }
