--- a/src/ui/components/Rating/styles.scss
+++ b/src/ui/components/Rating/styles.scss
@@ -25,17 +25,6 @@ $icon-small: 13px;
         width: inherit;
       }
     }
-
-    &.Rating--editable {
-      .IconStar {
-        width: $icon-medium;
-
-        // stylelint-disable max-nesting-depth
-        @include respond-to(large) {
-          width: $icon-small;
-        }
-      }
-    }
   }
 
   // The width of large rating stars are controlled by the container.
